--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,17 @@
-# Core Python dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
+# Goodwill Gaming Platform v2.0 - Clean Requirements
+# Core dependencies for enhanced platform with Maps & SQLite
 
-# Google Cloud dependencies
-google-cloud-firestore==2.13.1
-google-cloud-pubsub==2.18.4
-google-cloud-run==0.10.1
-google-cloud-storage==2.10.0
-google-cloud-logging==3.8.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
+streamlit>=1.28.0
+requests>=2.31.0
+plotly>=5.17.0
+pydantic>=2.0.0
+python-multipart>=0.0.6
 
-# A2A Agent dependencies
-google-adk-agents==0.3.0
-a2a-sdk==0.3.2
+# Maps functionality
+folium>=0.15.0
+streamlit-folium>=0.15.0
 
-# Authentication
-google-auth==2.24.0
-google-auth-oauthlib==1.1.0
-PyJWT==2.8.0
-
-# Database and caching
-redis==5.0.1
-asyncpg==0.29.0
-
-# AI and ML dependencies
-prophet==1.1.5
-scikit-learn==1.3.2
-numpy==1.25.2
-pandas==2.1.4
-
-# Visualization and frontend
-streamlit==1.28.2
-plotly==5.17.0
-folium==0.15.0
-streamlit-folium==0.15.0
-deck==0.8.9
-
-# WebSocket support
-websockets==12.0
-aiohttp==3.9.1
-
-# Monitoring and logging
-prometheus-client==0.19.0
-opencensus-ext-stackdriver==0.8.0
-
-# Development and testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.1
-
-# Additional utilities
-python-dotenv==1.0.0
-httpx==0.25.2
-Pillow==10.1.0
-geopy==2.4.1
-shapely==2.0.2
+# Google ADK mock (since real package not available on PyPI)
+# Using built-in libraries for notification agent
