--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 
+
+google-generativeai
+python-dotenv
+
 # Web Dashboard
 streamlit>=1.28.0
 streamlit-folium>=0.15.0
